tests/parser-test-files/bad-files/define-class.15.error
error: Malformed functional dependency
  --> test:4:23
   |
 4 |  (define-class (C :a :b (:a :b . :c)))
   |                         ^^^^^^^^^^^^ unexpected dotted list
